<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray">

        <!-- Toolbar with Tool Button -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- The button that will open the tools navigation drawer -->
                <Button
                    android:id="@+id/goBackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_back" />

                <EditText
                    android:id="@+id/drawingTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="name"
                    android:hint="@string/enter_title"
                    android:inputType="text" />

                <Button
                    android:id="@+id/dragButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Drag Disabled" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <!-- CanvasView for drawing -->
        <com.example.drawingactivity.CanvasView
            android:id="@+id/canvasView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/sidebar"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <!-- The Bottom bar -->
        <LinearLayout
            android:id="@+id/sidebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!-- SeekBar for adjusting pen size -->
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/row_column_border" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/pen_size"
                        android:textSize="24dp"></TextView>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/row_column_border" />

                    <SeekBar
                        android:id="@+id/seekBarPenSize"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="100"
                        android:padding="5dp" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/row_column_border" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/color"
                        android:textSize="24dp"></TextView>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/row_column_border" />

                    <!-- Layout for color buttons -->
                    <GridLayout
                        android:id="@+id/colorSwatchesGrid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:columnCount="6"
                        android:orientation="horizontal"
                        android:padding="7dp">

                        <!-- Swatches will be added dynamically in Kotlin code -->

                    </GridLayout>

                    <Button
                        android:id="@+id/customizeColorButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customize" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/row_column_border" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Shape: "
                        android:textSize="24dp"></TextView>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/row_column_border" />

                    <Button
                        android:id="@+id/StrokeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="stroke" />

                    <Button
                        android:id="@+id/CircleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="circle" />

                    <Button
                        android:id="@+id/TriangleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="triangle" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/row_column_border" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/row_column_border" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Bitmap: "
                        android:textSize="24dp"></TextView>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/row_column_border" />

                    <Button
                        android:id="@+id/InvertColorButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Invert color" />

                    <Button
                        android:id="@+id/AddNoiseButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add noise" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>